--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,10 +15,13 @@
                         <div class="container">
                                 <div class="nav-wrapper">
                                     <a href="/" class="brand-logo">BD Store</a>
-                                    <ul class="right hide-on-med-and-down topmenu">
-                                        <li><a href="/carrinho"><i class="material-icons icones" >shopping_cart</i> Carrinho de Compras </a></li>
-                                        <li><a href="/login"><i class="material-icons icones">person_pin</i> Login</a></li>
-
+                                    <ul class="right hide-on-med-and-down topmenu"> 
+                                        <% if(!currentUser){ %>
+                                            <li><a href="/login">Login</a></li>
+                                        <% } else { %>
+                                            <li><a href="/profile"><%= currentUser.nome_user %></a></li>
+                                            <li><a href="/logout">Logout</a></li>
+                                        <% } %>
                                     </ul>
                                 </div>
                         </div>
