--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,17 @@
 <% include partials/header %>
     <div class="row text-center">
+            <% data.forEach(function(data){ %>
             <div class="col s12 m4">
                 <div class="card">
                     <div class="card-image">
-                        <img src="" class="responsive-img" >
+                        <img src="<%= data.url_img %>" class="responsive-img" >
                     </div>
                     <div class="card-content" style="text-align : center;">
-                      <h4 class="center"> </h4>
-                      <a href="" class="btn blue darken-4 z-depth-4 waves-effect waves-light" style="text-align : center;"> <i class="material-icons icones">add</i> Ver mais</a>
+                      <h4 class="center"> Preço <%= data.preco_unit %></h4>
+                      <a href="/produtos/<%= data.id_produtos %>" class="btn blue darken-4 z-depth-4 waves-effect waves-light" style="text-align : center;"> <i class="material-icons icones">add</i> Ver mais</a>
                     </div>
-                      
              </div>          
              </div>
+         <% }); %>
     </div>
  <% include partials/footer %>
