--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,7 @@
 <% include partials/header %>    
+                 <% if (message.length > 0) { %>
+		                <div class="btn btn-large red accent-4"><%= message %></div>
+	               <% } %>
                 <div class="valign-wrapper row login-box">
                     <div class="col card hoverable s10 pull-s1 m6 pull-m3 l4 pull-l4">
                       <form action="/login" method="POST">
