--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -19,6 +19,7 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+<script src="/js/script.js"></script> 
 </script>
 </body>
 </html>
